# agent-swarm

./: .Dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: dtos.py  endpoints.py  main.py
app/agents/: customer_support.py  personality.py  router.py  source_agent.py  workflow.py
app/agents/tools/: balance_tool.py  handoff.py  rag_tool.py  user_profile.py  web_search.py
app/api/: dtos.py  endpoints.py
app/core/: config.py  logging.py
app/data/: balances.json  users.json
app/llm/: client.py
app/rag/: ingestion.py  retriever.py
tests/: conftest.py  test_personality_agent.py  test_router_agent.py  test_source_agent.py
