[project]
name = "agent-swarm"
version = "0.1.0"
description = "Multi-agent system where agents collaborate to process a user requests and generate responses"
authors = [
    {name = "pedroaires",email = "pedro.aires.cabral@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
